--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,1 @@
-<div class="row">
-  <div class="col-12">
-    <h3>Parent component</h3>
-    <app-child>
-      
-    </app-child>
-  </div>
-</div>
+<app-parent></app-parent>
