--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,12 @@
 
-<app-parent></app-parent>
+<div class="row mt-5">
+    <div class="col-md-4">
+        <app-component1></app-component1>
+    </div>
+    <div class="col-md-4">
+        <app-component2></app-component2>
+    </div>
+    <div class="col-md-4">
+        <app-component3></app-component3>
+    </div>
+</div>
